# lafe

./: .gitignore  CMakeLists.txt
src/: lafe-program.cpp
src/ecs/: CMakeLists.txt
src/ecs/src/: component.cpp  component.hpp  entity.cpp  entity.hpp  system.cpp  system.hpp
src/ecs/src/derived/: cast_light.cpp  cast_light.hpp  movement.cpp  movement.hpp  rotation.cpp  rotation.hpp  spinning.cpp  spinning.hpp  translation.cpp  translation.hpp
src/geometry/: CMakeLists.txt
src/geometry/src/: geometry.cpp  geometry.hpp  vertex.cpp  vertex.hpp
src/input/: CMakeLists.txt
src/input/src/: gl_input.cpp  gl_input.hpp  input.cpp  input.hpp  input_impl.cpp  input_impl.hpp  input_item.cpp  input_item.hpp  input_manager.cpp  input_manager.hpp
src/renderer/: CMakeLists.txt
src/renderer/assets/shaders/gl/: fragment_shader_basic.glsl  fragment_shader_gouraud.glsl  vertex_shader.glsl  vertex_shader_gouraud.glsl  vertex_shader_phong.glsl
src/renderer/src/: camera.cpp  camera.hpp  light_source.cpp  light_source.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  render_manager.cpp  render_manager.hpp  renderer.cpp  renderer.hpp  transform.cpp  transform.hpp  vertex.cpp  vertex.hpp
src/renderer/src/gl/assets/: fragment_shader_basic.glsl  fragment_shader_light_source.glsl  vertex_shader.glsl  vertex_shader_indexed.glsl
src/renderer/src/gl/data/: gl_array_buffer.hpp  gl_index_buffer.cpp  gl_mesh.hpp  gl_vao.hpp  gl_vertex_buffer.cpp  gl_vertex_buffer.hpp
src/renderer/src/gl/render/: gl_program.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_shader.cpp  gl_shader.hpp
src/renderer/src/gl/src/data/: gl_array_buffer.cpp  gl_array_buffer.hpp  gl_index_buffer.cpp  gl_index_buffer.hpp  gl_mesh.cpp  gl_mesh.hpp  gl_model.cpp  gl_model.hpp  gl_vao.cpp  gl_vao.hpp  gl_vertex_buffer.hpp
src/renderer/src/gl/src/render/: gl_program.cpp  gl_program.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_shader.cpp
src/window/: CMakeLists.txt
src/window/src/: gl_window.cpp  gl_window.hpp  window.cpp  window.hpp
